Fix crud table to work in dark mode

--- a/front/src/components/crud-editor/crud-table.scss
+++ b/front/src/components/crud-editor/crud-table.scss
@@ -4,13 +4,13 @@
   h2 {
     margin-bottom: 1rem;
     font-size: 1.5rem;
-    color: #222;
+    color: #202124;
   }
 
   table {
     width: 100%;
     border-collapse: collapse;
-    background: #fff;
+    background: #202124;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
@@ -18,12 +18,12 @@
     th,
     td {
       padding: 0.75rem 1rem;
-      border-bottom: 1px solid #eaeaea;
+      border-bottom: 1px solid #17181a;
       text-align: left;
     }
 
     thead {
-      background: #f8f8f8;
+      background: #18181a;
       th {
         font-weight: 600;
         font-size: 0.9rem;
@@ -32,7 +32,7 @@
     }
 
     tbody tr:hover {
-      background: #fafafa;
+      background: #15151c;
     }
 
     input {
